# MicrocontrollerVisionClassifier

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
backend/: README.md  app.py  sample_request.json  sample_response.json
boards/stm32/: README.md
frontend_flutter/: README.md  pubspec.yaml
frontend_flutter/lib/: main.dart
frontend_flutter/web/: index.html  manifest.json
include/: app.h
scripts/: convert_tflite.py  flash_firmware.sh  run_demo.sh  tflite_to_c_array.py  train_cnn.py
src/: app.c  main.c
src/inference/: inference.c  inference.h
src/model/: model_data.c  model_data.h
src/preprocess/: preprocess.c  preprocess.h
web/: README.md  app.js  config.js  index.html  styles.css
